Closed
Bug 65900
Opened 24 years ago
Closed 24 years ago
Header envelope display/mismatch problem when offline
Categories
(SeaMonkey :: MailNews: Backend, defect, P3)
SeaMonkey
MailNews: Backend
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.5
People
(Reporter: laurel, Assigned: mscott)
References
Details
(Whiteboard: [nsbeta1+ 2/13])
Attachments
(2 files)
4.57 KB,
patch
|
Details | Diff | Splinter Review | |
549 bytes,
patch
|
Details | Diff | Splinter Review |
Using jan17 commercial trunk build, win98 (assuming all platforms)
If I've selected an IMAP message while online with message pane open, then go
offline and select through the threadpane (I have not downloaded messages for
offline use yet) the header envelope display stays visible (shows header content
for the message I selected when online.
Steps to reproduce:
1. When online, open IMAP inbox, login and select a message. Message pane is
open/shown. Message header information displays in header envelope and message
content is downloaded and shown in message pane.
2. Go offline (I clicked the offline icon in lower left corner of status bar).
3. Select another message in the thread pane.
Note the selection point in the thread pane moves correctly, message pane
displays text that the message is unavailable since it hasn't been downloaded
for offline use.
Note the header envelope display is still present showing header info for
the previously/online selected message.
Result: Message header envelope display is mismatched to thread pane selection.
Expected: No header envelope should be displayed, just the message pane showing
the "message unavailable" text.
changing assignee, bienvenu mentioned this might be Seth's.
Assignee: bienvenu → sspitzer
Comment 2•24 years ago
|
||
marking nsbeta1+ and moving to mozilla0.9
Priority: -- → P3
Whiteboard: [nsbeta1+]
Target Milestone: --- → mozilla0.9
Comment 3•24 years ago
|
||
marking nsbeta1- and moving to future milestone.
Comment 6•24 years ago
|
||
adding nsenterprise+
Keywords: nsenterprise → nsenterprise+
Target Milestone: Future → mozilla0.9.4
Assignee | ||
Comment 8•24 years ago
|
||
we need to fix this for .9.4 since it's an nsentprise bug. I can probably help
take a look at it since it has to do with the message pane.
Assignee: sspitzer → mscott
Assignee | ||
Comment 9•24 years ago
|
||
Assignee | ||
Comment 10•24 years ago
|
||
I've attached the fix to allow the back end to clear the message header area.
This code gets called when we throw up error messages in the message pane by
inserting raw HTML into the message pane iframe.
However, I don't think the entrprise guys are going to like a side effect of
this bug. We've aggravted the disppearing message header pane bug when you go
back online. You have to adjust the splitter or otherwise force a repaint in
order to see the message header area again. We've been working with evaughan to
get that fixed for almost a year and still haven't been able to figure it out
yet. So it's not probably not going to get fixed for eMojo.
I'll let them decide if they want this fixed at the cost of aggravating that
problem.
Status: NEW → ASSIGNED
Comment 11•24 years ago
|
||
Thanks Scott. I'll let eclient team know what's going on and tell
them to post to this bug
Assignee | ||
Comment 12•24 years ago
|
||
thanks gary!
Comment 13•24 years ago
|
||
Scott,
So does your fix affect/will affect David's fix? bug 84249
just curious
Comment 14•24 years ago
|
||
This looks like an ugly fix with ugly side effects. I don't think many
enterprise customers will be pleased with the side effects. Recommending we
hold off until we have a somewhat better fix.
Assignee | ||
Comment 15•24 years ago
|
||
Nah they are unrelated actually. The side effect of the patch for this bug is
that the message header area (where it says To, cc, date and from) doesn't
re-appear when you click on a message after you've gone back on line. You have
to cause the window to repaint (resizing, dragging the splitter, etc) for the
header to pop back up.
David's bug has to do with the thread pand which is above the message header area.
Assignee | ||
Comment 16•24 years ago
|
||
hong, this fix isn't ugly at all. I'm not sure why you are saying that? It's not
a hack. It's the correct solution. There is not a "better solution" on the way.
Hiding and showing the message pane aggravates a known toolkit bug owned by
evaughan. We've been trying to fix it for over a year, it's still there. You are
going to run into that bug with this fix.
I was merely pointing out that in order to fix this bug we are going to
aggravate 39655 again.
Assignee | ||
Comment 17•24 years ago
|
||
Assignee | ||
Comment 18•24 years ago
|
||
I was able to hack around the problem of the header pane not showing when you
went back online by claiming a folder switch just happened when we toggle
between offline & online. Setting this global variable causes the message pane
to "double" show the header view when you click on a message. This is how we
worked around 39655 in the non offline case for mozilla.
Comment 19•24 years ago
|
||
sr=sspitzer
Assignee | ||
Comment 20•24 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 21•24 years ago
|
||
OK wiht aug27 commercial trunk build: mac OS 9.0, win98, linux rh6.2
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•