Bug #65900 --> when offline and we don't have a message body, clear the header ovleray r/sr=sspitzer